<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Mirakel is an Android App for managing your ToDo-Lists
  ~
  ~  Copyright (c) 2013-2014 Anatolij Zelenin, Georg Semmler.
  ~
  ~      This program is free software: you can redistribute it and/or modify
  ~      it under the terms of the GNU General Public License as published by
  ~      the Free Software Foundation, either version 3 of the License, or
  ~      any later version.
  ~
  ~      This program is distributed in the hope that it will be useful,
  ~      but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~      GNU General Public License for more details.
  ~
  ~      You should have received a copy of the GNU General Public License
  ~      along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<resources>

    <string name="title_activity_mirakel">MirakelActivity</string>
    <string name="action_settings">Settings</string>
    <string name="list_title">Lists</string>
    <string name="progress_header">Progress:</string>
    <string name="notes">Notes</string>
    <string name="task_list_header">List:</string>
    <string name="task_due_header">Due:</string>
    <string name="task_reminder_header">Reminder:</string>
    <string name="task_add_more">Add more</string>
    <string name="task_button_done">DONE</string>
    <string name="edit_note">Edit Note</string>
    <string name="save">Save</string>
    <string name="task_move_to">Move task to</string>
    <string name="task_tags">Tags:</string>
    <string name="subtask_add">Add subtask…</string>
    <string name="task_new">New task</string>

</resources>
