<?xml version="1.0" encoding="utf-8"?>

<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Mirakel is an Android App for managing your ToDo-Lists
  ~
  ~   Copyright (c) 2013-2015 Anatolij Zelenin, Georg Semmler.
  ~
  ~       This program is free software: you can redistribute it and/or modify
  ~       it under the terms of the GNU General Public License as published by
  ~       the Free Software Foundation, either version 3 of the License, or
  ~       any later version.
  ~
  ~       This program is distributed in the hope that it will be useful,
  ~       but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~       MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~       GNU General Public License for more details.
  ~
  ~       You should have received a copy of the GNU General Public License
  ~       along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/padding_default_half"
            android:paddingTop="@dimen/padding_default_half"
            android:orientation="horizontal"
            android:id="@+id/dates_due_wrapper">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/padding_drawable"
                android:drawableStart="@drawable/ic_calendar_white_18dp"
                android:textAppearance="@style/TextAppearance.Regular.Small"
                android:layout_marginEnd="2dp"
                android:text="@string/task_due_header"
                android:id="@+id/dates_due_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="In 2 Tagen"
                android:textColor="?colorDueToday"
                android:textAppearance="@style/TextAppearance.Light.Small"
                android:id="@+id/dates_due" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_default_half"
            android:paddingTop="@dimen/padding_default_half"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/list_wrapper">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/padding_drawable"
                android:drawableStart="@drawable/ic_list_white_18dp"
                android:layout_marginEnd="2dp"
                android:textAppearance="@style/TextAppearance.Regular.Small"
                android:id="@+id/dates_list_title"
                android:text="@string/task_list_header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zu Hause"
                android:textAppearance="@style/TextAppearance.Light.Small"
                android:id="@+id/dates_list" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_default_half"
        android:paddingTop="@dimen/padding_default_half"
        android:id="@+id/reminder_wrapper"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Regular.Small"
            android:layout_marginEnd="2dp"
            android:drawablePadding="@dimen/padding_drawable"
            android:drawableStart="@drawable/ic_alarm_white_18dp"
            android:id="@+id/dates_reminder_title"
            android:text="@string/task_reminder_header" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Morgen um 16:30 Uhr"
            android:textAppearance="@style/TextAppearance.Light.Small"
            android:id="@+id/dates_reminder" />
    </LinearLayout>
</merge>