<?xml version="1.0" encoding="utf-8"?>

<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Mirakel is an Android App for managing your ToDo-Lists
  ~
  ~   Copyright (c) 2013-2015 Anatolij Zelenin, Georg Semmler.
  ~
  ~       This program is free software: you can redistribute it and/or modify
  ~       it under the terms of the GNU General Public License as published by
  ~       the Free Software Foundation, either version 3 of the License, or
  ~       any later version.
  ~
  ~       This program is distributed in the hope that it will be useful,
  ~       but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~       MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~       GNU General Public License for more details.
  ~
  ~       You should have received a copy of the GNU General Public License
  ~       along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="0dp"
    android:background="@drawable/background_fragment_task"
    android:descendantFocusability="beforeDescendants"
    android:minWidth="@dimen/dialog_min_width"
    android:orientation="vertical"
    tools:ignore="NewApi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:orientation="horizontal"
        android:paddingEnd="13dp"
        android:paddingStart="11dp"
        android:paddingTop="16dp">

        <de.azapps.mirakel.new_ui.views.ProgressDoneView
            android:id="@+id/task_progress_done"
            android:layout_width="@dimen/priorityDoneSize"
            android:layout_height="@dimen/priorityDoneSize"
            android:layout_marginEnd="16dp"
            custom:progress_background_color="?colorProgressBackground"
            custom:progress_color="?colorProgress" />

        <ViewSwitcher
            android:id="@+id/task_name_view_switcher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <!-- The linearlayout fixes the cut of of the last line in the textview. Keep it and don't remove it! -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/task_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/priorityDoneSize"
                    android:text="Example task"
                    android:textAppearance="@style/TextAppearance.Medium.Large"
                    android:textColor="?colorTextBlack" />
            </LinearLayout>

            <EditText
                android:id="@+id/task_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/save"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.Regular.Large"
                android:textColor="?colorTextBlack" />
        </ViewSwitcher>

        <de.azapps.mirakel.new_ui.views.PriorityChangeView
            android:id="@+id/priority"
            android:layout_width="@dimen/clickable_item_size"
            android:layout_height="40dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:background="?colorDivider"
        android:orientation="vertical" />


    <ScrollView
        android:id="@+id/task_fragment_scroll_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:descendantFocusability="beforeDescendants">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingTop="8dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="3dp">
            <de.azapps.mirakel.new_ui.views.DatesView
                android:id="@+id/task_dates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:orientation="vertical" />

                <View
                    android:id="@+id/divider_below_dates_view"
                    android:layout_below="@id/task_dates"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_marginBottom="@dimen/padding_default"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="@dimen/padding_default_half"
                    android:background="?colorDivider"
                    android:orientation="vertical" />

                <!-- Progress -->


                <TextView
                    android:id="@+id/progress_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="25dp"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_track_changes_white_18dp"
                    android:layout_below="@id/divider_below_dates_view"
                    android:text="@string/progress_header"
                    android:textAppearance="@style/TextAppearance.Regular.Small"
                    android:textColor="?colorTextGrey" />

                <de.azapps.material_elements.views.Slider
                    android:id="@+id/progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="72dp"
                    android:layout_marginTop="-48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/divider_below_dates_view"
                    android:layout_toEndOf="@id/progress_text"
                    android:layout_marginEnd="25dp"
                    custom:widget_color="?colorPrimary" />
            </RelativeLayout>

            <!-- Tags -->
            <LinearLayout
                android:id="@+id/tag_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                android:orientation="vertical">

                <include layout="@layout/task_divider" />

                <de.azapps.mirakel.new_ui.views.TagsView
                    android:id="@+id/task_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:layout_marginStart="25dp"
                    android:orientation="vertical"
                    android:paddingBottom="-1dp"
                    android:paddingTop="3dp" />
            </LinearLayout>

            <!-- Notes -->
            <LinearLayout
                android:id="@+id/note_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                android:orientation="vertical">

                <include layout="@layout/task_divider"/>

                <de.azapps.mirakel.new_ui.views.NoteView
                    android:id="@+id/task_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:layout_marginStart="25dp"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp" />
            </LinearLayout>


            <!-- Subtasks -->
            <LinearLayout
                android:id="@+id/subtask_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                android:orientation="vertical">

                <include layout="@layout/task_divider" />

                <de.azapps.mirakel.new_ui.views.SubtasksView
                    android:id="@+id/task_subtasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:layout_marginStart="25dp"
                    android:orientation="vertical" />
            </LinearLayout>

            <!-- Files -->
            <LinearLayout
                android:id="@+id/file_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                android:orientation="vertical">

                <include layout="@layout/task_divider" />

                <de.azapps.mirakel.new_ui.views.FileView
                    android:id="@+id/task_files"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:layout_marginStart="25dp"
                    android:orientation="vertical" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="?colorDivider"
        android:orientation="vertical" />

    <LinearLayout
        android:id="@+id/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/task_fragment_scroll_container"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/task_button_add_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="7"
            android:background="?android:attr/selectableItemBackground"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_plus_grey600_18dp"
            android:paddingStart="20dp"
            android:text="@string/task_add_more"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.Light"
            android:textColor="?colorTextGrey" />

        <Button
            android:id="@+id/task_button_done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/task_button_done"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.Regular"
            android:textColor="?colorTextGrey" />
    </LinearLayout>
</LinearLayout>
